--- a/src/components/GetApp/GetApp.module.scss
+++ b/src/components/GetApp/GetApp.module.scss
@@ -29,5 +29,5 @@
     height: 3.2rem;
 }
 .forward-icon {
-    color: var(--icon-theme);
+    color: var(--white-color);
 }
