--- a/src/components/Notifications/Notifications.module.scss
+++ b/src/components/Notifications/Notifications.module.scss
@@ -36,7 +36,9 @@
     padding: 0 1.6rem;
     @media screen and (max-width: 425px) {
         justify-content: space-between;
-        padding: 0 1rem;
+        padding: 0 0.25rem;
+        gap: 0.1rem;
+
         // height: 100vh;
     }
 }
