--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -59,7 +59,7 @@
 .verical-switch {
     position: relative;
     width: 2.4rem;
-    height: 4.4rem;
+    height: 5.4rem;
     padding: 0 0.25rem;
     align-items: center;
     justify-content: center;
