--- a/src/mobile/components/MobileSearch/MobileSearch.module.scss
+++ b/src/mobile/components/MobileSearch/MobileSearch.module.scss
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 100vw;
     padding: 1rem;
-    background-color: #fff;
+    background-color: var(--bg-theme);
 }
 .search {
     flex: 1;
