--- a/src/pages/VideoPage/VideoPage.module.scss
+++ b/src/pages/VideoPage/VideoPage.module.scss
@@ -103,6 +103,7 @@
 .content {
     max-width: 80%;
     text-align: left;
+    color: var(--text-theme);
     word-wrap: break-word;
     word-break: break-all;
     white-space: pre-wrap;
